--- a/docs/.vuepress/styles/index.styl
+++ b/docs/.vuepress/styles/index.styl
@@ -22,3 +22,38 @@ pre.vue-container
       color #808080
       font-weight light
 
+
+.el-button--primary.is-plain {
+    color: #258fb8;
+    background: #ecf5ff;
+    border-color: #b3d8ff
+}
+
+.el-button--primary.is-plain:focus,.el-button--primary.is-plain:hover {
+    background: #258fb8;
+    border-color: #258fb8;
+    color: #FFF
+}
+
+.el-button--primary.is-plain:active {
+    background: #1e85aa;
+    border-color: #1e85aa;
+    color: #FFF;
+    outline: 0
+}
+
+.el-button--primary.is-plain.is-disabled,.el-button--primary.is-plain.is-disabled:active,.el-button--primary.is-plain.is-disabled:focus,.el-button--primary.is-plain.is-disabled:hover {
+    color: #8cc5ff;
+    background-color: #ecf5ff;
+    border-color: #d9ecff
+}
+
+.el-pagination.is-background .el-pager li:not(.disabled).active {
+    background-color: #258fb8;
+    color: #FFF;
+}
+
+.el-select-dropdown__item.selected {
+    color: #258fb8;
+    font-weight: 700;
+}
